--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils fb_versions cyclope_utils %}
 
 {% block content %}
 
@@ -15,7 +15,7 @@
   {% endif %}
   <div class="action-content download_link"><a href="{{ media.document }}">{% trans "download file" %}</a></div>
 
-  <div class="html-content description">{{ media.description|safe }}</div>
+  <div class="html-content description">{{ media.description|smart_style }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
