--- a/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
@@ -21,7 +21,7 @@
       </a>
     </div>
 
-  <div class="html-content description">{{ media.description|safe }}</div>
+  <div class="html-content description">{{ media.description|smart_style }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
