--- a/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions %}
+{% load i18n tagging_tags fb_versions cyclope_utils %}
 
   <div class="content-view document teaser">
 
@@ -9,7 +9,7 @@
     {% endif %}
 
     {% if document.description %}
-      <div class="description html-content">{{ document.description }}</div>
+      <div class="description html-content">{{ document.description|smart_style }}</div>
     {% endif %}
 
     {% if document.author %}
