--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
@@ -12,7 +12,7 @@
 
     {% if externalcontent.description %}
     <div class="description html-content">
-      {{ externalcontent.description }}
+      {{ externalcontent.description|smart_style }}
     {% if not externalcontent.skip_detail %}
       <span class="more"><a href="{% url externalcontent-detail externalcontent.slug %}"></span>
       {% trans "More"%}
