--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions %}
+{% load i18n tagging_tags fb_versions cyclope_utils %}
 
   <div class="content-view picture teaser picture-teaser">
 
@@ -7,7 +7,7 @@
      <div class="media-content teaser_icon_container"><a href="{% url picture-detail picture.slug %}"><img class="teaser_icon" src="{% version picture.image.path 'small' %}" border="0" /></a></div>
 
      {% if picture.description %}
-       <div class="html-content description">{{ picture.description }}</div>
+       <div class="html-content description">{{ picture.description|smart_style }}</div>
      {% endif %}
 
      {% if picture.author %}
