--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags fb_versions %}
+{% load i18n tagging_tags fb_versions cyclope_utils %}
 
   <div class="content-view regularfile teaser regularfile-teaser">
 
@@ -9,7 +9,7 @@
     {% endif %}
 
     {% if regularfile.description %}
-      <div class="description html-content">{{ regularfile.description }}</div>
+      <div class="description html-content">{{ regularfile.description|smart_style }}</div>
     {% endif %}
 
     {% if regularfile.author %}
