--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils tagging_tags fb_versions markup %}
+{% load i18n cyclope_utils tagging_tags fb_versions %}
 
 {% block content %}
   <div>
@@ -18,7 +18,7 @@
 
       {% if category.description %}
       <div class="text">
-        {{ category.description|textile }}
+        {{ category.description|smart_style }}
       </div>
       {% endif %}
 
