--- a/cyclope/templates/contact_form/contact_form.html
+++ b/cyclope/templates/contact_form/contact_form.html
@@ -1,9 +1,9 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n %}
+{% load i18n cyclope_utils %}
 
 {% block content%}
 <div id="contact" class="user_input">
-<h6 class="hiper-titles">{{ instructions }} </h6>
+{{ instructions|smart_style }}
 <form action="{% url contact_form %}" method="post">
   {{ form.as_p }}
   <input type="submit" class="submit" value="{% trans "Send" %}" />
