--- a/cyclope/apps/newsletter/templates/newsletter/content.html
+++ b/cyclope/apps/newsletter/templates/newsletter/content.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils markup fb_versions dbgettext_tags %}
+{% load i18n cyclope_utils fb_versions dbgettext_tags %}
 
 {% block content %}
 
@@ -11,14 +11,14 @@
   <tr>
     <td>
       <br/>
-      <span class="pretitle"><a name="editorial">{{ article.pretitle }}</a></span>
+      <span class="pretitle"><a name="editorial">{% trans article.pretitle %}</a></span>
       {% if newsletter.show_ToC %}
       <span class="show-ToC"><a href="#ToC">{% trans "Return to Table of Contents" %}</a></span>
       {% endif %}
       <a name="article__{{ article.slug }}">
         <h3 class="title">{% trans article.name  %}</h3>
       </a>
-      <h4>{{ article.summary|safe }}</h4>
+      <h4>{{ article|parsed_gettext:"summary"|smart_style }}</h4>
       {% if article.author %}
       <h5>{% trans "By"%} {{ article.author }}</h5>
       {% endif %}
@@ -30,17 +30,7 @@
         {% endif %}
 
         <span class="html-text html-content">
-        {% if CYCLOPE_ARTICLE_TEXT_STYLE == 'raw' or CYCLOPE_ARTICLE_TEXT_STYLE == 'wysiwyg'%}
-          {{ article|parsed_gettext:"text"|safe }}
-        {% else %}
-          {% if CYCLOPE_ARTICLE_TEXT_STYLE == 'textile' %}
-            {{ article.text|textile }}
-          {% else %}
-            {% if CYCLOPE_ARTICLE_TEXT_STYLE == 'markdown'%}
-              {{ article.text|markdown }}
-            {% endif %}
-          {% endif %}
-        {% endif %}
+          {{ article|parsed_gettext:"text"|smart_style}}
         </span>
       </p>
       <span class="permalink"><a href="{% url article-detail article.slug %}">{% trans "Visit website" %}</a></span>
