--- a/cyclope/templates/cyclope/themes/neutrona/newsletter.html
+++ b/cyclope/templates/cyclope/themes/neutrona/newsletter.html
@@ -1,4 +1,4 @@
-{% load layout i18n fb_versions cyclope_utils markup %}
+{% load layout i18n fb_versions cyclope_utils %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
     Plantilla Boletín Neutron para Cyclope 3 GPL
@@ -15,7 +15,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
   <head>
     <title>{{ newsletter.name }}</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <style>
       body {color:#000;margin:0;padding:0;}
       .mascara {color:#000;padding:0 50px;background-color:#ccc;}
@@ -78,7 +78,7 @@
           <!-- fin menucito -->
 
           <!-- inicia cabezal -->
-          <table id="cabezal" align="center" border="0" cellpadding="0" cellspacing="0" width="720"> 
+          <table id="cabezal" align="center" border="0" cellpadding="0" cellspacing="0" width="720">
             <tr>
               <td height="124" valign="middle">
                 <h1 class="titulo">{{ newsletter.name }}</h1>
@@ -102,7 +102,7 @@
                       <div id="contenedor_portada">
                         <img src="{{ base_theme_media_url }}images/boletin/ilustracion.jpg" hspace="0" vspace="0" align="center"/>
                         <span class="editorial-resumen">
-                          {{ newsletter.content_category.description|textile }}
+                          {{ newsletter.content_category.description|smart_style }}
                         </span>
                       </div>
 
@@ -130,7 +130,7 @@
                             {% alias categorization.content_object as 'article' %}
 
                             {% if article.pretitle %}
-                            <span class="pretitulo-sumario">{{ article.pretitle }}</span>
+                            <span class="pretitulo-sumario">{% trans article.pretitle %}</span>
                             {% endif %}
                             <a href='#{{ categorization.content_type.model }}__{{ article.slug }}' class="sumario-sumario">
                               {{ article.name }}
@@ -176,7 +176,7 @@
           {% region 'after_content' %}
 
           <!-- inicia pie -->
-          <table align="center" border="0" cellpadding="0" cellspacing="0" width="720"> 
+          <table align="center" border="0" cellpadding="0" cellspacing="0" width="720">
             <tr>
               <td height="80" valign="middle">
                 <span class="pie">
