--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
@@ -12,29 +12,40 @@ var show_children = function (el){
 }
 
 jQuery(document).ready(function(){
-    var menu_align = '{{ align }}';
+    var expand_style = '{{ expand_style }}';
 
-    if (menu_align != 'DISABLED'){
+    if (expand_style != 'DISABLED'){
         // Hide children of collapsible menus
         $('#{{ menu_slug }}_menu_{{ region_name }} .has_children').each(function(){
             hide_children($(this).parent());
         });
 
-        // Expand children on mouse enter
-        $('#{{ menu_slug }}_menu_{{ region_name }} ul li').mouseenter(function() {
-            show_children($(this));
-        });
-
-        if (menu_align == 'HORIZONTAL'){
-            $('#{{ menu_slug }}_menu_{{ region_name }} ul li').mouseleave(function() {
-                hide_children($(this));
+        // Only expand when clicking on a top level and never collapse
+        if (expand_style == 'ON_CLICK'){
+            $('#{{ menu_slug }}_menu_{{ region_name }} .has_children').parent().one('click', function() {
+                show_children($(this));
+                return false;
             });
         }
-        // Collapse whe whole menu if the alignment is VERTICAL
+
         else{
-            $('#{{ menu_slug }}_menu_{{ region_name }}').mouseleave(function(){
-                hide_children($('#{{ menu_slug }}_menu_{{ region_name }} .has_children').parent());
+            // Expand children on mouse enter
+            $('#{{ menu_slug }}_menu_{{ region_name }} ul li').mouseenter(function() {
+                show_children($(this));
             });
+
+            // Collapse when leaving a menu item if the alignment is HORIZONTAL
+            if (expand_style == 'HORIZONTAL'){
+                $('#{{ menu_slug }}_menu_{{ region_name }} ul li').mouseleave(function() {
+                    hide_children($(this));
+                });
+            }
+            // Collapse when leaving the whole menu if the alignment is VERTICAL
+            else{
+                $('#{{ menu_slug }}_menu_{{ region_name }}').mouseleave(function(){
+                    hide_children($('#{{ menu_slug }}_menu_{{ region_name }} .has_children').parent());
+                });
+            }
         }
     }
 });
