--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_footer.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_footer.html
@@ -1,5 +1,24 @@
 {% load i18n comments %}
 
+{% if media.get_last_change_date or media.source %}
+  <div class="meta-content">
+    {% if media.get_last_change_date %}
+    <span class="date">
+      {% trans "Last modification date" %}: {{ media.get_last_change_date }}
+    </span>
+    {% endif %}
+    {% if media.source %}
+    <span class="source">
+      {% if media.get_last_change_date %}|{% endif%}
+      {% trans "Source" %}: {{media.source}}
+    </span>
+    {% endif %}
+  </div>
+{% endif %}
+
+{% comment %} {# TAGS ARE NOT IMPLEMENTED YET #}
   {% if media.tags %}
-  <div class="meta-content"><span class="tags"><span class="tags-label">{% trans "Tags" %}:</span> {{ media.tags }}</span></div>
+    <div class="meta-content"><span class="tags"><span class="tags-label">{% trans "Tags" %}:</span> {{ media.tags }}</span></div>
   {% endif %}
+{% endcomment %}
+
