--- a/cyclope/templates/admin/cyclope/menuitem/change_form.html
+++ b/cyclope/templates/admin/cyclope/menuitem/change_form.html
@@ -24,6 +24,27 @@ $(function() {
         label: 'verbose_name'
       });
 
+
+    function update_to_default_view_options(){
+        var view_name = $("#id_content_view option:selected").val();
+        var content_type_id = $("#id_content_type option:selected").val();
+        // $("#view_options_multiple").parent().parent().hide();
+        if (view_name && content_type_id){
+            $.get("/{{CYCLOPE_PREFIX}}options_view_widget_html",
+               { content_type_id: content_type_id, view_name: view_name },
+               function(data){
+                   if (data){
+                        $("#view_options_multiple").replaceWith(data);
+                        div_container.show();
+                    }
+                    else{
+                        $("#view_options_multiple").html("");
+                        div_container.hide();
+                    }
+               });
+        }
+    }
+
     $.cyclope = {
         access_number : 0,
     };
@@ -31,36 +52,23 @@ $(function() {
     var div_container = $("#view_options_multiple").parent().parent();
     if ($("#view_options_multiple").html() === ""){
         div_container.hide();
+        $.cyclope.initial_content = false;
+    }
+    else{
+        $.cyclope.initial_content = true;
     }
 
     $("#id_content_view").change(function() {
         $.cyclope.access_number += 1;
-        if ($.cyclope.access_number >= 2){
-            /*
-            $.cyclope.access_number >= 2 because 1 changes are made by the
-            cainedSelect in page load. So the third is the first change made by
-            the user.
-            */
-            var view_name = $("#id_content_view option:selected").val();
-            var content_type_id = $("#id_content_type option:selected").val();
-            // $("#view_options_multiple").parent().parent().hide();
-            if (view_name && content_type_id){
-                $.get("/{{CYCLOPE_PREFIX}}options_view_widget_html",
-                   { content_type_id: content_type_id, view_name: view_name },
-                   function(data){
-                       if (data){
-                            $("#view_options_multiple").replaceWith(data);
-                            div_container.show();
-                        }
-                        else{
-                            $("#view_options_multiple").html("");
-                            div_container.hide();
-                        }
-                   });
+
+        if ($.cyclope.access_number == 2){
+            if ($.cyclope.initial_content === false){
+                update_to_default_view_options();
             }
         }
-
-
+        else if ($.cyclope.access_number >= 3){
+            update_to_default_view_options();
+        }
     });
 
 });
