--- a/cyclope/templates/admin/change_list.html
+++ b/cyclope/templates/admin/change_list.html
@@ -1,5 +1,6 @@
 {% extends "admin/base_site.html" %}
 {% load adminmedia admin_list i18n cyclope_utils %}
+{% load url from future %}
 
 {% block extrastyle %}
   {{ block.super }}
@@ -8,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
   {% endif %}
   {% if cl.formset or action_form %}
-    {% url admin:jsi18n as jsi18nurl %}
+    {% url 'admin:jsi18n' as jsi18nurl %}
     <script type="text/javascript" src="{{ jsi18nurl|default:'../../jsi18n/' }}"></script>
   {% endif %}
   {{ media.css }}
@@ -83,11 +84,13 @@
     {% block object-tools %}
       {% if has_add_permission %}
         <ul class="object-tools">
-          <li>
-            <a href="add/{% if is_popup %}?_popup=1{% endif %}" class="addlink">
-              {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
-            </a>
-          </li>
+          {% block object-tools-items %}
+            <li>
+              <a href="add/{% if is_popup %}?_popup=1{% endif %}" class="addlink">
+                {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
+              </a>
+            </li>
+          {% endblock %}
         </ul>
       {% endif %}
     {% endblock %}
