--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -14,7 +14,7 @@ Si modificas no borres estas lineas :)
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{{ CYCLOPE_SITE_SETTINGS.global_title }}</title>
+    <title><title>{% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}</title></title>
     <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
     <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
     <link href="/rss" title="RSS" type="application/rss+xml" rel="alternate">
@@ -42,13 +42,13 @@ Si modificas no borres estas lineas :)
         });
 
 // search box events
-        
+
         // clear input on focus
 	$('.cleardefault').focus(function() {
             if( this.value == this.title ) {
                this.value = '';
             }
-	});	
+	});
 
 	// if field is empty afterward, add text again
 	$('.cleardefault').blur(function() {
@@ -87,7 +87,7 @@ AIRE
             </form>
           </div>
       </div>
-      
+
 
       <div class="clear"></div>
 
@@ -103,7 +103,7 @@ TIERRA
           <div class="top"></div>
           {% region 'left_sidebar' %}
 
-          
+
 
 {% comment %}
           <div id="tags">
@@ -151,7 +151,7 @@ TIERRA
           Licencia Creative Commons Reconocimiento-NoComercial-SinObraDerivada 3.0
         </a></span>.<br/>
         <span id="codigo sur">Este sitio ha sido diseñado por
-        <a href="http://www.codigosur.org">Código Sur</a></span>, 
+        <a href="http://www.codigosur.org">Código Sur</a></span>,
         <span id="cyclope">administrado con el editor dinámico de contenidos
         <a href="http://cyclope.codigosur.org">Cyclope GPL</a>
         desarrollado por
@@ -175,7 +175,7 @@ TIERRA
         </map>
       </div>
       <!-- /pie -->
-     
+
     </div>
     <!-- /mascara -->
 
