--- a/cyclope/templates/cyclope/themes/neutronica/base.html
+++ b/cyclope/templates/cyclope/themes/neutronica/base.html
@@ -14,7 +14,7 @@ Si modificas no borres estas lineas :)
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{{ CYCLOPE_SITE_SETTINGS.global_title }}</title>
+    <title>{% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}</title>
     <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
     <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
 
@@ -81,7 +81,7 @@ Si modificas no borres estas lineas :)
           Licencia Creative Commons Reconocimiento-NoComercial-SinObraDerivada 3.0
         </a></span>.<br/>
         <span id="codigo sur">Este sitio ha sido diseñado por
-        <a href="http://www.codigosur.org">Código Sur</a></span>, 
+        <a href="http://www.codigosur.org">Código Sur</a></span>,
         <span id="cyclope">administrado con el editor dinámico de contenidos
         <a href="http://cyclope.codigosur.org">Cyclope GPL</a>
         desarrollado por
@@ -105,7 +105,7 @@ Si modificas no borres estas lineas :)
         </map>
       </div>
       <!-- /pie -->
-     
+
     </div>
     <!-- /mascara -->
 
