--- a/cyclope/templates/cyclope/themes/neutrona/two_sidebars.html
+++ b/cyclope/templates/cyclope/themes/neutrona/two_sidebars.html
@@ -8,18 +8,14 @@
 
 <div id="fuego" class="grid_14">
     {% region 'before_content' %}
-    <div class="container">
     {% block content %}{% endblock %}
-    </div>
     {% region 'after_content' %}
 </div>
 
-<div id="agua" class="grid_5">
-  <div class="top"></div>
+<div id="amor" class="grid_5">
   <div class="content">
     {% region 'right_sidebar'%}
   </div>
-  <div class="bottom"></div>
 </div>
 
 {% endblock %}
