--- a/cyclope/media/themes/neutrona/css/neutrona.css
+++ b/cyclope/media/themes/neutrona/css/neutrona.css
@@ -24,9 +24,10 @@ img {border:none;}
 h6.hiper-titles {border-left:6px solid #ddd;background-color:#eee;font-weight:700;color:#666;font-size:1.5em;padding:10px 25px;margin:0 0 25px;display:block;} /*define el estilo de titulares teaser_list, site_map y contact*/
 .container {margin:0;} /*define el margen de contenidos fuego*/
 
-form small {font-size:0.7em;padding:5px 0;display:block;} 
-form input {padding:2px;width:130px;border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;background:#fff;color:#000;border:1px solid #000;}
-form input.submit {width:30px;background:#666;color:#fff;border:1px solid #000;}
+form input {padding:5px;width:auto;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;background:#fff;color:#000;border:1px solid #000;}
+form input.submit {background:#ccc;color:#000;border:1px solid #999;}
+textarea {border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;}
+		
 
 /*-----------------------------------------------------------------------------------------------
 ESQUELETO GENERAL
@@ -93,6 +94,9 @@ AGUA
 #agua .menuitems_hierarchy li li li a, #agua .categories_hierarchy li li li a, #agua .categories_hierarchy_to_iconlist li li li a {color:#fff;}
 #agua .menuitems_hierarchy p, #agua .categories_hierarchy p, #agua .categories_hierarchy_to_iconlist p{clear:left;}	
 #agua .menuitems_hierarchy #current, #agua .categories_hierarchy #current, #agua .categories_hierarchy_to_iconlist #current {background:url(images/current-bg.gif) top left repeat-x;color:#ffffff;}
+#agua form small {font-size:0.7em;padding:5px 0;display:block;} 
+#agua form input {padding:2px;width:130px;border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;background:#fff;color:#000;border:1px solid #000;}
+#agua form input.submit {width:30px;background:#666;color:#fff;border:1px solid #000;}
 
 		
 #rss {width:140px;margin:20px auto;display:block;padding:0 0 8px 20px;background: url("../images/css/rss_logo.png") 0 3px no-repeat;}
@@ -137,7 +141,7 @@ AMOR
 .text {font-size:0.9em;padding:0;}
 .text ul {padding:0;margin:0 0 0 30px;list-style:square;}
 .text li {padding:15px 0 0;}
-.source  {font-size:0.75em;margin:0 0 5px;font-weight:400;color:#666;padding:30px 0 20px;display:block;} 
+
 /*#right_sidebar .article.teaser img {}
 #right_sidebar .article.teaser {float: none; }
 #right_sidebar .article.teaser {padding: 7px 0 0 0;; border-bottom: black dotted 1px;}
@@ -198,28 +202,36 @@ VISTA ARTICULO
 -----------------------------------------------------------------------------------------------*/
 
 #container .content-view h1 {color:#000;padding:10px 0;margin:30px 0 30px;border-bottom:1px solid #000;display:block;}
-.article-detail a, .staticpage-detail a {color:#ff0000;font-size:1em;}
-.article-detail {font-size:1em;}
+.article-detail a, .staticpage-detail a {color:#000;font-size:1em;}
+.article-detail {}
 
 .article-detail h1, .staticpage-detail h1 {color:#000;}
-.article-detail h1.title {padding:10px 0;display:block;}
+.article-detail h1.title {padding:10px 0;display:block;border-bottom:1px solid #666;}
 .article-detail h2, .staticpage-detail h2 {color:#000;}
-.article-detail h3, .staticpage-detail h3,  #container p.summary {color:#333;font-weight:700;}
-.article-detail h3.summary {color:#ff0000;font-weight:700;font-size:1.4em;padding:10px 0;}
+.article-detail h3, .staticpage-detail h3 {color:#333;font-weight:700;}
+.article-detail h3.summary {color:#333;font-weight:700;padding:10px 0;text-align:justify;line-height:1.5em;}
 .article-detail h4, .staticpage-detail h4 {color:#666;}
+.article-detail h4.author {color:#666;border-left:4px solid #ccc;padding:0 0 0 10px;margin:10px 0 20px;font-size:.9em;}
 .article-detail h5, .staticpage-detail h5 {color:#666;}
 .article-detail h6, .staticpage-detail h6 {color:#666;}
+.article-detail h6.pretitle {color:#666;text-transform:uppercase;}
+.article-detail h6.source {color:#666;}
 .article-detail pre,.staticpage-detail pre {margin:15px 0;padding:10px;border:1px solid #ccc;background:#eee;font-size:.75em;font-weight:700;color:#666;}
 .article-detail code,.staticpage-detail code {display:block;padding:10px 10px;color:#000;font-size: 1.2em;overflow-x:scroll;overflow-y:auto;font-weight:400;}
-.article-detail p, .staticpage-detail p {color:#333;line-height:1.8em;padding:0;text-align:justify;}
-.article-detail span,.staticpage-detail span /*solucion temporaria a bug html span caps*/ {margin:0;padding:0;}
-.article-detail blockquote, .staticpage-detail blockquote {margin:20px 0;padding:5px 0 0 20px;;font-size:0.9em;width:60%;line-height:1em;border-left:5px solid #ccc;}
+.article-detail .html-text p, .staticpage-detail p {color:#333;line-height:1.8em;padding:0;text-align:justify;}
+.article-detail span,.staticpage-detail span {margin:0;padding:0;}
+.article-detail p span,.staticpage-detail p span {margin:20px 0;display:block;padding:0;text-align:left;width:60%;background:#eee;padding:5px;}
+.article-detail blockquote, .staticpage-detail blockquote {margin:20px 0;padding:10px;;font-size:0.9em;width:60%;line-height:1em;border-left:5px solid #ccc;}
+.article-detail .html-text blockquote p, .staticpage-detail blockquote p {text-align:left;}
 .article-detail sup, .staticpage-detail sup {}
 .article-detail sub, .staticpage-detail sub {}
+.article-detail cite, .staticpage-detail cite {}
 .article-detail ul, .staticpage-detail ul {color:#000;font-size:1em;padding:15px 0;margin:0 0 0 30px;list-style:square;}
 .article-detail ol, .staticpage-detail ol {color:#000;font-size:1em;padding:15px 0;margin:0 0 0 30px;}  
 .article-detail li, .staticpage-detail li {margin:0 0 0 5px;padding:0 0 3px;}
 .article-detail acronym, .staticpage-detail acronym {}
+.article-detail del, .staticpage-detail del {}
+.article-detail ins, .staticpage-detail ins {}
 .article-detail table, .staticpage-detail table {margin:20px auto;color:#333;padding:0;border:none;}
 .article-detail th, .staticpage-detail th {background:#666;color:#fff;border:1px solid #000;margin:0;padding:3px;}
 .article-detail tr, .staticpage-detail tr {margin:0;padding:0;}
@@ -228,8 +240,46 @@ VISTA ARTICULO
 .article-detail img, .staticpage-detail img {}
 #container .content-view img {margin:20px 0 20px 20px;padding:0;float:none;box-shadow:2px 2px 20px #666;-webkit-box-shadow:2px 2px 20px #666;-moz-box-shadow: 2px 2px 20px #666;}
 .footnote {border-top:1px solid #ccc;color:#666;font-size:.8em;margin:10px 0;}
+.article-detail .date {color:#333;font-size:.9em;margin:5px 0 0;display:block;}
+.article-detail .source {color:#333;font-size:.9em;margin:20px 0 0;display:block;}
+.article-detail .categories ul {list-style:none;margin:10px 0;}
+.article-detail .categories li {display:inline;border:1px solid #ccc;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;padding:5px;background:#eee;color:#000;margin:10px 10px 0 0;font-size:.75em;}
 
 
+.article-detail .related_contents {font-weight:700;color:#003300;background:#eee;padding:10px;margin:0;width:60%;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;;}
+.article-detail .related_contents span {font-size:1em;padding:0;margin:0;color:#666;} 
+.article-detail .related_contents ul {padding:10px 0 0;margin:0;list-style:none;}
+.article-detail .related_contents ul ul {list-style:square;}
+.article-detail .related_contents li {color: #999;padding:0 10px 5px 0;margin:0 0 0 20px;}	
+.article-detail .related_contents li a {font-size:0.8em;color:#666;font-weight:400;}
+.article-detail .related_contents li a:hover {color:#000;font-weight:700;}
+#user_comments form input {width:40%;border:1px solid #999;margin:5px 0 15px;}
+#user_comments form input.submit {width:auto;background:#ccc;color:#000;margin:0 0 0 3px;border:1px solid #999;box-shadow:2px 2px 5px #666;-webkit-box-shadow:2px 2px 5px #666;-moz-box-shadow: 2px 2px 5px #666;}
+#user_comments textarea {width:550px;background-color:#fff;padding:4px;margin:5px 0 15px;border:1px solid #999;font-size: 1em;color:#333;display:block;}
+#user_comments label {display: block;margin:0 0;font-weight:700;font-size:0.9em;}
+#user_comments .show_comment_form {width:250px;;margin:0 0 20px;padding:3px;color:#fff;background:#666;border:1px solid #000;text-align:center;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;}
+#user_comments .show_comment_form a {color:#fff;} 
+
+
+
+
+
+#user_comments {width:550px;text-align:left;margin:25px 0 0;background-color:#fff;}
+#user_comments .data {color:#000;background-color:#eee;border:2px dotted #ddd;padding:10px;margin:0 0 20px;}
+#user_comments .data p {font-size:1em;color:#666;}
+#user_comments .when_who {color:#999;font-size:0.7em;}
+#user_comments .when_who a {color:#999;}
+
+
+#user_comments .bottom-post {margin:20px 0;border:none;border-top:6px dashed #eee;}
+#user_comments .box {color:#333; margin:0;width:644px;}
+#user_comments h6 {background-color:#fff;color:#666;margin:0 0 10px 0;padding:5px 0;font-weight:700;font-size:0.9em;}
+#user_comments img {margin:10px 0;display:block;}
+#user_comments form {padding:0 0 30px 0;margin:0 0 0 0;}				
+#user_comments fieldset {display: block;	margin: 0 0 0 0;padding:5px 0;border:none;} 
+#user_comments select {display: block;}
+#user_comments small {margin:0;color:#666;font-weight:400;display:block padding:3px 0;width:350px;clear:both;font-size:0.8em;}
+#user_comments .hidden {border:none;display:none;}
 
 
 #fuego-content .category h2,#fuego-content .collection  big {margin:0 0 10px;font-weight:700;display:block;}
@@ -241,52 +291,26 @@ VISTA ARTICULO
 #fuego-content th {background:#666;color:#fff;}
 #fuego-content td {border:1px solid #999;}
 
-#fuego-content .content-view {border-bottom:6px solid #eee;overflow:auto;}
+#fuego-content .content-view {overflow:auto;}
  
-#fuego-content .author {display:block;margin:0 0 25px 0;padding:0;color: #666666;font-size:0.8em;}
 #fuego-content .texto {font-size: 0.9em;padding:0;} 
 #fuego-content .texto ul {padding:0;margin:0 0 0 30px;list-style:square;} 
 #fuego-content .texto li {padding:15px 0 0;}
 #fuego-content .categories {}
-#fuego-content .related_contents {font-weight:bold;color:#003300;background:#eee;padding:10px;margin:0;width:50%;}
-#fuego-content .related_contents span {font-size:1em;padding:0;margin:0;color:#666;} 
-#fuego-content .related_contents ul {padding:10px 0 0;margin:0;list-style:none;}
-#fuego-content .related_contents ul ul {list-style:square;}
-#fuego-content .related_contents li {color: #999;padding:0 10px 5px 0;margin:0 0 0 20px;}	
-#fuego-content .related_contents li a {font-size:0.8em;color:#666;font-weight:400;}
-#fuego-content .related_contents li a:hover {color:#000;font-weight:700;}
+
 #fuego-content .article-teaser {margin: 4px 0 20px 0;clear:both;padding:3px 0;}
 #fuego-content h2 {margin:0;padding:0}
 #fuego-content h2 a {margin:0;padding:0;color:#000;}
 #fuego-content h2 img {}
-#fuego-content .pretitle, #fuego-content .date {font-size: 0.65em;text-transform: uppercase;margin:0 0 5px;color: #666666;display: inline;}
+#fuego-content .pretitle, {font-size: 0.65em;text-transform: uppercase;margin:0 0 5px;color: #666666;display: inline;}
 
 #fuego-content .article-teaser img {float:right;margin: 4px 0 9px 15px;height:135px;clear:both;border:1px solid #ccc;padding:3px;background:#eee;}
-#fuego-content .author {display: block;font-size: 0.8em;margin:0 0 12px;font-weight:700;color: #000;}
+
 #socialnetworks {font-size:0.75em;display:block;padding:0 0 10px;border-top:2px solid #eee;text-align:right;clear:both;}
 #socialnetworks img {width:24px;height:24px;margin:5px 3px -8px 0;padding:6px 0 0;border:none;clear:none;}
 #socialnetworks small {margin:0;padding:5px 5px 0 0;color:#666;text-align:right;}  
 #fuego-content hr {}
-#user_comments {width:550px;text-align:left;margin:25px 0 0;background-color:#fff;}
-#user_comments .data {color:#000;background-color:#eee;border:2px dotted #ddd;padding:10px;margin:0 0 20px;}
-#user_comments .data p {font-size:1em;color:#666;}
-#user_comments .when_who {color:#999;font-size:0.7em;}
-#user_comments .when_who a {color:#999;}
-#user_comments .show_comment_form {width:200px;margin:0 0 20px;padding:3px;color:#fff;background:#666;border:1px solid #000;text-align:center;}
-#user_comments .show_comment_form a {color:#fff;} 
-#user_comments label {display: block;margin:0 0;font-weight:400;font-size:0.8em;width:285px;}
-#user_comments textarea {width:550px;background-color:#fff;padding:4px;margin:0 0 15px;border:1px solid #999;font-size: 1em;color:#333;display:block;}
-#user_comments input {padding:4px;margin:0 0 5px;color:#333;display: block;}
-#user_comments input.submit {color:#000;clear: both;margin:10px 0 0;font-weight:400;}
-#user_comments .bottom-post {margin:20px 0;border:none;border-top:6px dashed #eee;}
-#user_comments .box {color:#333; margin:0;width:644px;}
-#user_comments h6 {background-color:#fff;color:#666;margin:0 0 10px 0;padding:5px 0;font-weight:700;font-size:0.9em;}
-#user_comments img {margin:10px 0;display:block;}
-#user_comments form {padding:0 0 30px 0;margin:0 0 0 0;}				
-#user_comments fieldset {display: block;	margin: 0 0 0 0;padding:5px 0;border:none;} 
-#user_comments select {display: block;}
-#user_comments small {margin:0;color:#666;font-weight:400;display:block padding:3px 0;width:350px;clear:both;font-size:0.8em;}
-#user_comments .hidden {border:none;display:none;}
+
 #author img {border:none:border-left:1px solid #ccc;padding:0;margin:0 5px 0 0;}
 .tools {margin:10px 0;padding:0 0;}
 .tools ul {text-align:left;margin:0;padding:0;list-style:none;font-weight:bold;font-size:0.8em;}
